--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<finalName>TerraformApp</finalName>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
